src/rlgl.h

    #define TRACELOG(level, ...) (void)0
        #define GRAPHICS_API_OPENGL_33
    #define GRAPHICS_API_OPENGL_11
    #define GRAPHICS_API_OPENGL_33
    #define GRAPHICS_API_OPENGL_33
    #define GRAPHICS_API_OPENGL_ES2
        #define RL_DEFAULT_BATCH_BUFFER_ELEMENTS  8192
        #define RL_DEFAULT_BATCH_BUFFER_ELEMENTS  2048
    #define RL_DEFAULT_BATCH_BUFFERS                 1      
    #define RL_DEFAULT_BATCH_DRAWCALLS             256      
    #define RL_DEFAULT_BATCH_MAX_TEXTURE_UNITS       4      
    #define RL_MAX_MATRIX_STACK_SIZE                32      
    #define RL_MAX_SHADER_LOCATIONS                 32      
    #define RL_CULL_DISTANCE_NEAR                 0.05      
    #define RL_CULL_DISTANCE_FAR                4000.0      
typedef enum bool { false = 0, true = !false } bool;
typedef struct Matrix {
    float m0, m4, m8, m12;      
    float m1, m5, m9, m13;      
    float m2, m6, m10, m14;     
    float m3, m7, m11, m15;     
} Matrix;
typedef struct rlVertexBuffer {
    int elementCount;           
    float *vertices;            
    float *texcoords;           
    float *normals;             
    unsigned char *colors;      
#if defined(GRAPHICS_API_OPENGL_11) || defined(GRAPHICS_API_OPENGL_33)
    unsigned int *indices;      
#endif
#if defined(GRAPHICS_API_OPENGL_ES2)
    unsigned short *indices;    
#endif
    unsigned int vaoId;         
    unsigned int vboId[5];      
} rlVertexBuffer;
typedef struct rlDrawCall {
    int mode;                   
    int vertexCount;            
    int vertexAlignment;        
    unsigned int textureId;     
} rlDrawCall;
typedef struct rlRenderBatch {
    int bufferCount;            
    int currentBuffer;          
    rlVertexBuffer *vertexBuffer; 
    rlDrawCall *draws;          
    int drawCounter;            
    float currentDepth;         
} rlRenderBatch;
typedef enum {
    RL_OPENGL_SOFTWARE = 0,  
    RL_OPENGL_11,               
    RL_OPENGL_21,               
    RL_OPENGL_33,               
    RL_OPENGL_43,               
    RL_OPENGL_ES_20,            
    RL_OPENGL_ES_30             
} rlGlVersion;
typedef enum {
    RL_LOG_ALL = 0,             
    RL_LOG_TRACE,               
    RL_LOG_DEBUG,               
    RL_LOG_INFO,                
    RL_LOG_WARNING,             
    RL_LOG_ERROR,               
    RL_LOG_FATAL,               
    RL_LOG_NONE                 
} rlTraceLogLevel;
typedef enum {
    RL_PIXELFORMAT_UNCOMPRESSED_GRAYSCALE = 1,     
    RL_PIXELFORMAT_UNCOMPRESSED_GRAY_ALPHA,        
    RL_PIXELFORMAT_UNCOMPRESSED_R5G6B5,            
    RL_PIXELFORMAT_UNCOMPRESSED_R8G8B8,            
    RL_PIXELFORMAT_UNCOMPRESSED_R5G5B5A1,          
    RL_PIXELFORMAT_UNCOMPRESSED_R4G4B4A4,          
    RL_PIXELFORMAT_UNCOMPRESSED_R8G8B8A8,          
    RL_PIXELFORMAT_UNCOMPRESSED_R32,               
    RL_PIXELFORMAT_UNCOMPRESSED_R32G32B32,         
    RL_PIXELFORMAT_UNCOMPRESSED_R32G32B32A32,      
    RL_PIXELFORMAT_UNCOMPRESSED_R16,               
    RL_PIXELFORMAT_UNCOMPRESSED_R16G16B16,         
    RL_PIXELFORMAT_UNCOMPRESSED_R16G16B16A16,      
    RL_PIXELFORMAT_COMPRESSED_DXT1_RGB,            
    RL_PIXELFORMAT_COMPRESSED_DXT1_RGBA,           
    RL_PIXELFORMAT_COMPRESSED_DXT3_RGBA,           
    RL_PIXELFORMAT_COMPRESSED_DXT5_RGBA,           
    RL_PIXELFORMAT_COMPRESSED_ETC1_RGB,            
    RL_PIXELFORMAT_COMPRESSED_ETC2_RGB,            
    RL_PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA,       
    RL_PIXELFORMAT_COMPRESSED_PVRT_RGB,            
    RL_PIXELFORMAT_COMPRESSED_PVRT_RGBA,           
    RL_PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA,       
    RL_PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA        
} rlPixelFormat;
typedef enum {
    RL_SHADER_LOC_VERTEX_POSITION = 0,  
    RL_SHADER_LOC_VERTEX_TEXCOORD01,    
    RL_SHADER_LOC_VERTEX_TEXCOORD02,    
    RL_SHADER_LOC_VERTEX_NORMAL,        
    RL_SHADER_LOC_VERTEX_TANGENT,       
    RL_SHADER_LOC_VERTEX_COLOR,         
    RL_SHADER_LOC_MATRIX_MVP,           
    RL_SHADER_LOC_MATRIX_VIEW,          
    RL_SHADER_LOC_MATRIX_PROJECTION,    
    RL_SHADER_LOC_MATRIX_MODEL,         
    RL_SHADER_LOC_MATRIX_NORMAL,        
    RL_SHADER_LOC_VECTOR_VIEW,          
    RL_SHADER_LOC_COLOR_DIFFUSE,        
    RL_SHADER_LOC_COLOR_SPECULAR,       
    RL_SHADER_LOC_COLOR_AMBIENT,        
    RL_SHADER_LOC_MAP_ALBEDO,           
    RL_SHADER_LOC_MAP_METALNESS,        
    RL_SHADER_LOC_MAP_NORMAL,           
    RL_SHADER_LOC_MAP_ROUGHNESS,        
    RL_SHADER_LOC_MAP_OCCLUSION,        
    RL_SHADER_LOC_MAP_EMISSION,         
    RL_SHADER_LOC_MAP_HEIGHT,           
    RL_SHADER_LOC_MAP_CUBEMAP,          
    RL_SHADER_LOC_MAP_IRRADIANCE,       
    RL_SHADER_LOC_MAP_PREFILTER,        
    RL_SHADER_LOC_MAP_BRDF              
} rlShaderLocationIndex;
RLAPI void rlglInit(int width, int height);             
RLAPI void rlglClose(void);                             
RLAPI int rlGetVersion(void);                           
RLAPI void rlDrawRenderBatchActive(void);               
    typedef void (GL_APIENTRYP PFNGLDRAWARRAYSINSTANCEDEXTPROC) (GLenum mode, GLint start, GLsizei count, GLsizei primcount);
    typedef void (GL_APIENTRYP PFNGLDRAWELEMENTSINSTANCEDEXTPROC) (GLenum mode, GLsizei count, GLenum type, const void *indices, GLsizei primcount);
    typedef void (GL_APIENTRYP PFNGLVERTEXATTRIBDIVISOREXTPROC) (GLuint index, GLuint divisor);
    #define RL_DEFAULT_SHADER_ATTRIB_NAME_POSITION     "vertexPosition"    
    #define RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD     "vertexTexCoord"    
    #define RL_DEFAULT_SHADER_ATTRIB_NAME_NORMAL       "vertexNormal"      
    #define RL_DEFAULT_SHADER_ATTRIB_NAME_COLOR        "vertexColor"       
    #define RL_DEFAULT_SHADER_ATTRIB_NAME_TANGENT      "vertexTangent"     
    #define RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD2    "vertexTexCoord2"   
    #define RL_DEFAULT_SHADER_UNIFORM_NAME_MVP         "mvp"               
    #define RL_DEFAULT_SHADER_UNIFORM_NAME_VIEW        "matView"           
    #define RL_DEFAULT_SHADER_UNIFORM_NAME_PROJECTION  "matProjection"     
    #define RL_DEFAULT_SHADER_UNIFORM_NAME_MODEL       "matModel"          
    #define RL_DEFAULT_SHADER_UNIFORM_NAME_NORMAL      "matNormal"         
    #define RL_DEFAULT_SHADER_UNIFORM_NAME_COLOR       "colDiffuse"        
    #define RL_DEFAULT_SHADER_SAMPLER2D_NAME_TEXTURE0  "texture0"          
    #define RL_DEFAULT_SHADER_SAMPLER2D_NAME_TEXTURE1  "texture1"          
    #define RL_DEFAULT_SHADER_SAMPLER2D_NAME_TEXTURE2  "texture2"          
static double rlCullDistanceNear = RL_CULL_DISTANCE_NEAR;
static double rlCullDistanceFar = RL_CULL_DISTANCE_FAR;
void rlglInit(int width, int height)
{
    isGpuReady = true;
#if defined(GRAPHICS_API_OPENGL_43) && RLGL_ENABLE_OPENGL_DEBUG_CONTEXT
    if ((glDebugMessageCallback != NULL) && (glDebugMessageControl != NULL))
    {
        glDebugMessageCallback(rlDebugMessageCallback, 0);
        glEnable(GL_DEBUG_OUTPUT);
        glEnable(GL_DEBUG_OUTPUT_SYNCHRONOUS);
    }
#endif
#if defined(GRAPHICS_API_OPENGL_33) || defined(GRAPHICS_API_OPENGL_ES2)
    unsigned char pixels[4] = { 255, 255, 255, 255 };   
    RLGL.State.defaultTextureId = rlLoadTexture(pixels, 1, 1, RL_PIXELFORMAT_UNCOMPRESSED_R8G8B8A8, 1);
    RLGL.State.currentTextureId = RLGL.State.defaultTextureId;
    if (RLGL.State.defaultTextureId != 0) TRACELOG(RL_LOG_INFO, "TEXTURE: [ID %i] Default texture loaded successfully", RLGL.State.defaultTextureId);
    else TRACELOG(RL_LOG_WARNING, "TEXTURE: Failed to load default texture");
    rlLoadShaderDefault();
    RLGL.State.currentShaderId = RLGL.State.defaultShaderId;
    RLGL.State.currentShaderLocs = RLGL.State.defaultShaderLocs;
    RLGL.State.currentShaderLocs[RL_SHADER_LOC_VERTEX_NORMAL] = RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL;
    RLGL.defaultBatch = rlLoadRenderBatch(RL_DEFAULT_BATCH_BUFFERS, RL_DEFAULT_BATCH_BUFFER_ELEMENTS);
    RLGL.State.currentShaderLocs[RL_SHADER_LOC_VERTEX_NORMAL] = -1;
    RLGL.currentBatch = &RLGL.defaultBatch;
    for (int i = 0; i < RL_MAX_MATRIX_STACK_SIZE; i++) RLGL.State.stack[i] = rlMatrixIdentity();
    RLGL.State.transform = rlMatrixIdentity();
    RLGL.State.projection = rlMatrixIdentity();
    RLGL.State.modelview = rlMatrixIdentity();
    RLGL.State.currentMatrix = &RLGL.State.modelview;
#endif 
#if defined(GRAPHICS_API_OPENGL_SOFTWARE)
    int result = swInit(width, height);
    if (result == 0)
    {
        TRACELOG(RL_LOG_ERROR, "RLSW: Software renderer initialization failed!");
        exit(-1);
    }
#endif
    glDepthFunc(GL_LEQUAL);                                 
    glDisable(GL_DEPTH_TEST);                               
    glBlendFunc(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA);      
    glEnable(GL_BLEND);                                     
    glCullFace(GL_BACK);                                    
    glFrontFace(GL_CCW);                                    
    glEnable(GL_CULL_FACE);                                 
#if defined(GRAPHICS_API_OPENGL_11)
    glHint(GL_PERSPECTIVE_CORRECTION_HINT, GL_NICEST);      
    glShadeModel(GL_SMOOTH);                                
#endif
#if defined(GRAPHICS_API_OPENGL_33)
    glEnable(GL_TEXTURE_CUBE_MAP_SEAMLESS);                 
#endif
#if defined(GRAPHICS_API_OPENGL_33) || defined(GRAPHICS_API_OPENGL_ES2)
    RLGL.State.framebufferWidth = width;
    RLGL.State.framebufferHeight = height;
#endif
    glClearColor(0.0f, 0.0f, 0.0f, 1.0f);                   
    glClearDepth(1.0f);                                     
    glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);     
    TRACELOG(RL_LOG_INFO, "RLGL: Default OpenGL state initialized successfully");
}
void rlglClose(void)
{
#if defined(GRAPHICS_API_OPENGL_33) || defined(GRAPHICS_API_OPENGL_ES2)
    rlUnloadRenderBatch(RLGL.defaultBatch);
    rlUnloadShaderDefault(); 
    glDeleteTextures(1, &RLGL.State.defaultTextureId); 
    TRACELOG(RL_LOG_INFO, "TEXTURE: [ID %i] Default texture unloaded successfully", RLGL.State.defaultTextureId);
#endif
#if defined(GRAPHICS_API_OPENGL_SOFTWARE)
    swClose(); 
#endif
    isGpuReady = false;
}
int rlGetVersion(void)
{
    int glVersion = 0;
#if defined(GRAPHICS_API_OPENGL_SOFTWARE)
    glVersion = RL_OPENGL_SOFTWARE;
#elif defined(GRAPHICS_API_OPENGL_11)
    glVersion = RL_OPENGL_11;
#endif
#if defined(GRAPHICS_API_OPENGL_21)
    glVersion = RL_OPENGL_21;
#elif defined(GRAPHICS_API_OPENGL_43)
    glVersion = RL_OPENGL_43;
#elif defined(GRAPHICS_API_OPENGL_33)
    glVersion = RL_OPENGL_33;
#endif
#if defined(GRAPHICS_API_OPENGL_ES3)
    glVersion = RL_OPENGL_ES_30;
#elif defined(GRAPHICS_API_OPENGL_ES2)
    glVersion = RL_OPENGL_ES_20;
#endif
    return glVersion;
}
void rlDrawRenderBatchActive(void)
{
#if defined(GRAPHICS_API_OPENGL_33) || defined(GRAPHICS_API_OPENGL_ES2)
    rlDrawRenderBatch(RLGL.currentBatch);    
#endif
}